vpc/ex2/vpc.tf
resource "aws_vpc" "lab-architect-vpc" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_hostnames = true

  tags = {
    Name = "lab-architect-vpc"
  }
}
